kube/k8s-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-test-django
spec:
  selector:
    matchLabels:
      app: k8s-test-django
  template:
    metadata:
      labels:
        app: k8s-test-django
    spec:
      containers:
        - name: k8s-test-django
          image: bfcc/k8s-test-django
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          ports:
            - containerPort: 80
