kube/k8s-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-test-django
spec:
  selector:
    app: k8s-test-django
  ports:
    - port: 80
